조회수 구현

--- a/templates/cmapp/question_detail.html
+++ b/templates/cmapp/question_detail.html
@@ -26,7 +26,8 @@
                 {% endif %}
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">{{ question.author.username }}</div>
-                    <div>{{ question.create_date }}</div>
+                    <div class="mb-2">{{ question.create_date }}</div>
+                    <div>{{ question.views }}명이 이 글을 보았습니다.</div>
                 </div>
             </div>
         </div>
