--- a/templates/cmapp/question_detail.html
+++ b/templates/cmapp/question_detail.html
@@ -17,6 +17,9 @@
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text">{{ question.content|mark }}</div>
+            {% if question.imgs %}
+            <img class="card-img-bottom" src="{{ question.imgs.url }}" alt="Card image cap">
+            {% endif %}
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
@@ -43,6 +46,57 @@
         <a href="javascript:void(0)" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'cmapp:question_delete' question.id %}">삭제</a>
         {% endif %}
     </div>
+
+    <!-- 댓글 -->
+    <h5 class="border-bottom my-3 py-2">{{ question.comment_set.count }}개의 댓글이 있습니다.</h5>
+    {% for comment in question.comment_set.all %}
+    <a id="comment_{{ comment.id }}"></a>
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text">{{ comment.content }}</div>
+            <div class="d-flex justify-content-end">
+                {% comment %} {% if answer.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">수정 일시</div>
+                    <div>{{ answer.modify_date }}</div>
+                </div>
+                {% endif %} {% endcomment %}
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ comment.author.username }}</div>
+                    <div>{{ comment.create_date }}</div>
+                </div>
+            </div>
+
+            {% comment %} <!-- 답변 추천/수정/삭제 -->
+            <div class="my-3">
+                <a href="javascript:void(0)" data-uri="{% url 'cmapp:answer_vote' answer.id  %}"
+               class="recommend btn btn-sm btn-outline-secondary">추천
+                    <span class="badge rounded-pill bg-success">{{answer.voter.count}}</span>
+                </a>
+                {% if request.user == answer.author %}
+                <a href="{% url 'cmapp:answer_modify' answer.id  %}" 
+                class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="#" class="delete btn btn-sm btn-outline-secondary "
+               data-uri="{% url 'cmapp:answer_delete' answer.id  %}">삭제</a>
+                {% endif %}
+            </div> {% endcomment %}
+        </div>
+    </div>
+    {% endfor %}
+
+    <!-- 댓글 등록 -->
+    <form action="{% url 'cmapp:comment_create' question.id %}" method="post" class="my-3">
+        {% csrf_token %}
+        {% include "form_errors.html" %}
+    
+        <div class="mb-3">
+            <label for="content" class="form-label">댓글내용</label>
+            <textarea 
+            {% if not user.is_authenticated %} disabled {% endif %}
+            name="content" id="content" class="form-control" rows="5"></textarea>
+        </div>
+        <input type="submit" value="댓글등록" class="btn btn-primary">
+    </form>
 
     <!-- 답변 -->
     <h5 class="border-bottom my-3 py-2">{{ question.answer_set.count }}개의 답변이 있습니다.</h5>
