--- a/templates/cmapp/question_form.html
+++ b/templates/cmapp/question_form.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% include "form_errors.html" %}
 
@@ -15,6 +15,8 @@
         <div class="mb-3">
             <label for="content" class="form-label">내용</label>
             <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
+            <label for="imgs">이미지 첨부: </label>
+            <input type="file" class="form-control" name="imgs" id="imgs">
         </div>
 
         <button type="submit" class="btn btn-primary">저장하기</button>
