--- a/css/Information/write.css
+++ b/css/Information/write.css
@@ -1,8 +1,8 @@
 .top-background {
-    background-image: url('/img/top-background-1.jpg');
+    background-image: url('/img/top-background-2.jpg');
 }
 
-.question-write {
+.information-write {
     margin: 90px 150px 10px 150px;
 }
 
