--- a/css/Question/list.css
+++ b/css/Question/list.css
@@ -66,6 +66,10 @@
     border: 1px solid gray;
 }
 
+.question-search-input:focus {
+    outline: none;
+}
+
 .question-search-input {
     padding: 5px;
     border: none;
