--- a/css/Question/answer.css
+++ b/css/Question/answer.css
@@ -3,7 +3,51 @@
 }
 
 .question-write {
-    margin: 90px 150px 10px 150px;
+    margin: 50px 150px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.answer-left {
+    width: 50%;
+}
+
+.answer-right {
+    width: 50%;
+    border-left: 1px solid rgb(123, 117, 117);
+    padding: 20px;
+}
+
+.questionView {
+    padding: 20px;
+    border: 2px solid rgb(123, 117, 117);
+}
+
+.question-view-top {
+    margin-bottom: 10px;
+    display: flex;
+}
+
+.questionLanguage {
+    font-size: 30px;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.questionSubject {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.question-view-content {
+    padding-top: 20px;
+    border-top: 1px solid gray;
+    font-size: 18px;
+}
+
+.question-view-content img {
+    width: 50%;
 }
 
 .write-top {
@@ -12,51 +56,6 @@
     margin-bottom: 30px;
     padding-bottom: 20px;
     border-bottom: 2px solid black;
-}
-
-.writeFrom-top {
-    border: 1px solid gray;
-    padding: 20px;
-    display: flex;
-    gap: 15px;
-}
-
-.select-container {
-    width: 17%;
-    height: 45px;
-    border-radius: 5px;
-    border: 1px solid gray;
-    padding: 10px;
-    padding-left: 20px;
-}
-
-.selectBox {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 20px;
-}
-
-.selectBox option {
-    font-size: 20px;
-    font-weight: 100;
-}
-
-.writeSubject-input {
-    width: 85%;
-    height: 45px;
-    border-radius: 5px;
-    border: none;
-    background-color: rgb(239, 237, 237);
-    padding: 10px;
-    padding-left: 20px;
-    font-size: 20px;
-}
-
-.writeSubject-input:focus {
-    outline: 2px solid gray;
 }
 
 .writeForm-content {
