--- a/css/Login/login.css
+++ b/css/Login/login.css
@@ -76,14 +76,14 @@
     padding: 0px 5px;
 }
 
-.find-id,
-.find-password {
+.findIdBtn,
+.findPasswordBtn {
     padding-right: 20px;
     border-right: 1px solid gray;
 }
 
-.find-id:hover,
-.find-password:hover,
+.findIdBtn:hover,
+.findPasswordBtn:hover,
 .signupNavigator:hover {
     cursor: pointer;
     color: rgb(65, 62, 62);
