--- a/static/css/Question/list.css
+++ b/static/css/Question/list.css
@@ -1,6 +1,6 @@
 /* top 배경 이미지 */
 .top-background {
-    background-image: url('/img/top-background-1.jpg');
+    background-image: url('/media/img/top-background-1.jpg');
 }
 
 /* 질문 리스트 영역 */
