--- a/templates/cmapp/comment_form.html
+++ b/templates/cmapp/comment_form.html
@@ -1,17 +1,15 @@
-{% extends 'base.html' %}
-{% block content %}
-
-<!-- 댓글 수정 -->
-<div class="container my-3">
-    <form method="post">
-        {% csrf_token %}
-        {% include "form_errors.html" %}
-        
-        <div class="mb-3">
-            <label for="content" class="form-label">댓글내용</label>
-            <textarea class="form-control" name="content" id="content" rows="5">{{ form.content.value|default_if_none:'' }}</textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">저장하기</button>
-    </form>
-</div>
-{% endblock %}
+<form action="${form_url}" method="post" class="comment-input" id="comment_create_${comment_id}">
+    {% csrf_token %}
+    {% if form.prefix == 'comment'%}
+    {% include "form_errors.html" %}
+    {% endif %}
+    <div id="answer-comment-writer" class="commentWriter">${username}</div>
+    <div class="mb-3">
+        <div
+        {% if not user.is_authenticated %} disabled {% endif %}
+        name="comment-content" id="comment-content" class="commentText" rows="5" contenteditable="true"
+        placeholder="댓글을 입력하세요."></div>
+    </div>
+    <input type="submit" value="등록" class="commentCreateBtn">
+    <button onclick="form.remove();"class="btn btn-danger">x</button>
+</form>
