--- a/templates/html/Login/login.html
+++ b/templates/html/Login/login.html
@@ -1,9 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 
 <head>
     <title>로그인</title>
-    <link rel="stylesheet" href="/css/Login/login.css">
+    <link rel="stylesheet" href="{% static '/css/Login/login.css' %}">
 </head>
 
 <body>
