--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -1,8 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 
 <head>
-    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="{%static '/css/header.css' %}">
 </head>
 
 <body>
