--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -13,13 +13,13 @@
     <header>
         <!-- 로고 이미지 -->
         <div class="logo-img">
-            <a href="/html/Home/home.html">코딩 마스터</a>
+            <a href="{% url 'index' %}">코딩 마스터</a>
         </div>
         <!-- nav -->
         <nav>
             <ul class="header-menutop">
                 <li class="question">
-                    <a href="/html/Question/list.html">질문</a>
+                    <a href="{% url 'index' %}">질문</a> 
                 </li>
                 <li class="information">
                     <a href="/html/Information/list.html">정보</a>
