로그인, 글쓰기 연결

--- a/static/css/Question/write.css
+++ b/static/css/Question/write.css
@@ -1,5 +1,5 @@
 .top-background {
-    background-image: url('/img/top-background-1.jpg');
+    background-image: url('/static/img/top-background-1.jpg');
 }
 
 .question-write {
