--- a/templates/html/Login/login.html
+++ b/templates/html/Login/login.html
@@ -16,10 +16,20 @@
             <div class="login-closeBtn">
                 <i class="fa-solid fa-xmark"></i>
             </div>
-            <form class="login-container" action="" method="post">
-                <input type="text" class="login-id" placeholder="아이디">
-                <input type="password" class="login-password" placeholder="비밀번호">
+            <form class="login-container" method="post" action="{% url 'common:login' %}">
+                {% csrf_token %}
+        
+                <!-- 로그인 성공 후 이동되는 URL -->
+                <input type="hidden" name="next" value="{{ next }}"> 
+                
+                {% include "form_errors.html" %}
+                <input type="text" class="login-id" placeholder="아이디" name="username" id="username" value="{{ form.username.value|default_if_none:'' }}">
+
+                <input type="password" class="login-password" placeholder="비밀번호" name="password" id="password"
+                value="{{ form.password.value|default_if_none:'' }}">
+
                 <button type="submit" class="loginBtn">로그인</button>
+
                 <div class="login-more-action">
                     <div class="findIdBtn">아이디 찾기</div>
                     <div class="findPasswordBtn">비밀번호 찾기</div>
