--- a/static/css/Question/write.css
+++ b/static/css/Question/write.css
@@ -95,6 +95,10 @@
     border-radius: 7px;
     color: white;
     font-size: 17px;
+    border: none;
+    /* ## div button으로 바꾸니까 경계선 생겨서 없앰 */
+    cursor: pointer;
+    /* ## 클릭 손 모양 추가 */
 }
 
 .imgBtn {
