--- a/templates/html/Login/login.html
+++ b/templates/html/Login/login.html
@@ -33,7 +33,7 @@
                 <div class="login-more-action">
                     <div class="findIdBtn">아이디 찾기</div>
                     <div class="findPasswordBtn">비밀번호 찾기</div>
-                    <div class="signupNavigator">회원가입</div>
+                    <div class="signupNavigator"><a href="{% url 'common:signup' %}">회원가입</a></div>
                 </div>
             </form>
         </div>
